--- a/_getbutton.scss
+++ b/_getbutton.scss
@@ -1,6 +1,11 @@
 .getbutton {
     padding: 15px 0px 15px 0px;
     button {
-        border: 1px solid black;
+        border: 3px solid #ff8360;
+        border-radius: 100px;
+        font-size: 95%;
+        height: 40px;
+        font-family: $header-font;
+        color: #ff8360;
     }
 }
