--- a/_layout.scss
+++ b/_layout.scss
@@ -1,11 +1,13 @@
 body {
     .header {
+        margin-top: 20px;
+        padding: 15px;
         @include grid-row();
         h1 {
-            @include grid-column(9);
+            @include grid-column(10);
         }
         input {
-            @include grid-column(3);
+            @include grid-column(2);
         }
     }
     .chatfield {
@@ -33,6 +35,18 @@ body {
         }
         button {
             @include grid-column(2);
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .header {
+        @include grid-row();
+        h1 {
+            @include grid-column(12);
+        }
+        input {
+            @include grid-column(12);
         }
     }
 }
